# luigi-test-project

./: pyproject.toml
src/newproducts/: main.py  models.py  readers.py  settings.py  utils.py  writers.py
src/newproducts/tasks/: __init__.py  process_scraped_products.py  stats.py  unique_products.py
